676
Not sure if this is exactly what Paul was referring to, but here's an example of unwanted widening in a pattern match:
```scala
scala> val x = ""
x: String = ""

scala> (x match { case y => y }): x.type
<console>:9: error: type mismatch;
 found   : y.type (with underlying type String)
 required: x.type
              (x match { case y => y }): x.type
                                   ^
```
```scala
// scala/tools/nsc/transform/patmat/MatchTranslation.scala:134
val selectorTp = repeatedToSeq(elimAnonymousClass(selector.tpe.widen.withoutAnnotations))
```
